<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.redpanda4552</groupId>
    <artifactId>HifumiBot</artifactId>
    <version>3.13.4</version>
    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- Dependency Versions -->
        <jda.version>4.3.0_315</jda.version>
        <logback.version>1.2.5</logback.version>
        <jsoup.version>1.14.2</jsoup.version>
        <commonslang.version>3.12.0</commonslang.version>
        <commonstext.version>1.9</commonstext.version>
        <gson.version>2.8.8</gson.version>
        <dnsjava.version>3.4.1</dnsjava.version>
        
        <!-- Maven Plugin Versions -->
        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
        <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
    </properties>
    
    <build>
        <plugins>
            <!-- Handles Manifest -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>io.github.redpanda4552.HifumiBot.HifumiBot</mainClass>
                            <!-- Allows version info from here to be put into MANIFEST.mf. -->
                            <!-- Allows code to later look up the version. -->
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
                
            <!-- Makes a shaded jar with internalized dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>${maven-shade-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
    <repositories>
        <!-- Provides JDA -->
        <repository>
		    <id>dv8tion</id>
		    <name>m2-dv8tion</name>
		    <url>https://m2.dv8tion.net/releases</url>
		</repository>
    </repositories>
    
    <dependencies>
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>${jda.version}</version>
        </dependency>
        
        <!-- JDA uses internally for its logging -->
        <dependency>
	        <groupId>ch.qos.logback</groupId>
	        <artifactId>logback-classic</artifactId>
	        <version>${logback.version}</version>
        </dependency>
        
        <dependency>
	        <groupId>org.jsoup</groupId>
	        <artifactId>jsoup</artifactId>
	        <version>${jsoup.version}</version>
        </dependency>
            
        <dependency>
	        <groupId>org.apache.commons</groupId>
	        <artifactId>commons-lang3</artifactId>
	        <version>${commonslang.version}</version>
        </dependency>
        
        <dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-text</artifactId>
		    <version>${commonstext.version}</version>
		</dependency>
        
        <dependency>
	        <groupId>com.google.code.gson</groupId>
	        <artifactId>gson</artifactId>
	        <version>${gson.version}</version>
        </dependency>
        
        <dependency>
            <groupId>dnsjava</groupId>
            <artifactId>dnsjava</artifactId>
            <version>${dnsjava.version}</version>
        </dependency>
    </dependencies>
  
</project>